@@ -7,3 +7,5 @@ v0.2
 Added address column to Contact table, and additional Contact view flexibility.
 Open transactions now display on the Student index page in place of the "View" link.
 New page for viewing all transactions at once.
+Searching by student name in the attendance screen is enabled.
+
